--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <p><a href="./model_01/model_01.html" target="_blank" rel="noopener">model_01</a></p>
+    <p><a href="./model_02/model_02.html" target="_blank" rel="noopener">model_02</a></p>
   </body>
 </html>
