--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <p><a href="./model_01/model_01.html" target="_blank" rel="noopener">model_01</a></p>
     <p><a href="./model_02/model_02.html" target="_blank" rel="noopener">model_02</a></p>
+    <p><a href="./model_03/model_03.html" target="_blank" rel="noopener">model_03</a></p>
   </body>
 </html>
