--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p><a href="./model_02/model_02.html" target="_blank" rel="noopener">model_02</a></p>
     <p><a href="./model_03/model_03.html" target="_blank" rel="noopener">model_03</a></p>
     <p><a href="./model_04/model_04.html" target="_blank" rel="noopener">model_04</a></p>
+    <p><a href="./model_05/model_05.html" target="_blank" rel="noopener">model_05</a></p>
   </body>
 </html>
