--- a/model_01/model_01.html
+++ b/model_01/model_01.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="info">
 			<!-- <a href="../index.html" target="_blank" rel="noopener">назад</a> — на страницу работ<br /> -->
-			<a href="../index.html" target="_blank" rel="noopener">тут все</a> gltf-модели<br />
+			<!--<a href="../index.html" target="_blank" rel="noopener">тут все</a> gltf-модели<br /> -->
 			.glb-файл | Baked Shadows | HDR Environment | NeutralToneMapping (Khronos 3D)
 		</div>
 
