--- a/model_02/model_02.html
+++ b/model_02/model_02.html
@@ -11,7 +11,7 @@
 		<div id="info">
 			<!-- <a href="../index.html" target="_blank" rel="noopener">назад</a> — на страницу работ<br /> -->
 			<!--<a href="../index.html" target="_blank" rel="noopener">тут все</a> gltf-модели<br /> -->
-			.glb-файл | Baked Shadows | HDR Environment | NeutralToneMapping (Khronos 3D)
+			.glb-файл | HDR Environment | NeutralToneMapping (Khronos 3D)
 		</div>
 
 
