--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p><a href="./model_03/model_03.html" target="_blank" rel="noopener">model_03</a></p>
     <p><a href="./model_04/model_04.html" target="_blank" rel="noopener">model_04</a></p>
     <p><a href="./model_05/model_05.html" target="_blank" rel="noopener">model_05</a></p>
+    <p><a href="./model_06/model_06.html" target="_blank" rel="noopener">model_06</a></p>
   </body>
 </html>
