--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p><a href="./model_04/model_04.html" target="_blank" rel="noopener">model_04</a></p>
     <p><a href="./model_05/model_05.html" target="_blank" rel="noopener">model_05</a></p>
     <p><a href="./model_06/model_06.html" target="_blank" rel="noopener">model_06</a></p>
+    <p><a href="./model_07/model_07.html" target="_blank" rel="noopener">model_07</a></p>
   </body>
 </html>
