--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p><a href="./model_05/model_05.html" target="_blank" rel="noopener">model_05</a></p>
     <p><a href="./model_06/model_06.html" target="_blank" rel="noopener">model_06</a></p>
     <p><a href="./model_07/model_07.html" target="_blank" rel="noopener">model_07</a></p>
+    <p><a href="./model_08/model_08.html" target="_blank" rel="noopener">model_08</a></p>
   </body>
 </html>
