--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p><a href="./model_06/model_06.html" target="_blank" rel="noopener">model_06</a></p>
     <p><a href="./model_07/model_07.html" target="_blank" rel="noopener">model_07</a></p>
     <p><a href="./model_08/model_08.html" target="_blank" rel="noopener">model_08</a></p>
+    <p><a href="./model_09/model_09.html" target="_blank" rel="noopener">model_09</a></p>
   </body>
 </html>
